<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>usn.otm</groupId>
	<artifactId>cac-agent</artifactId>
	<version>1.12-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>cac-agent</name>
	<description>Builds a javaagent jar that hooks SSL in Java
	to use Windows-MY keystore by default, and posts a Swing
	UI to pick which key you want to use.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<build.number>0</build.number>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/MoebiusSolutions/cac-agent.git</connection>
		<developerConnection>scm:git:https://github.com/MoebiusSolutions/cac-agent.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit.pgm</artifactId>
			<version>4.8.0.201706111038-r</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.9.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>9</release>
					<compilerArgs>
						<arg>--add-modules=java.smartcardio</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Premain-Class>org.eclipse.jgit.pgm.CacHookingAgent</Premain-Class>
							<Can-Redefine-Classes>false</Can-Redefine-Classes>
							<Can-Retransform-Classes>false</Can-Retransform-Classes>
							<Git-Commit-Id>${mvngit.commit.id}</Git-Commit-Id>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.4</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>cac-aware-jgit</finalName>
							<archive>
								<manifest>
									<mainClass>org.eclipse.jgit.pgm.JgitCac</mainClass>
								</manifest>
							</archive>
						</configuration>
					</execution>
					<execution>
						<id>cac-aware-ssl-relay</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>cac-aware-ssl-relay</finalName>
							<archive>
								<manifest>
									<mainClass>com.moesol.cac.relay.Main</mainClass>
								</manifest>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>circleci</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<skip>true</skip>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly</id>
								<phase />
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>rpm</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>rpm-maven-plugin</artifactId>
						<version>2.2.0</version>
						<executions>
							<execution>
								<id>attached-rpm</id>
								<phase>package</phase>
								<goals>
									<goal>attached-rpm</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<name>${project.artifactId}</name>
							<group>Applications</group>
							<targetOS>Linux</targetOS>
							<prefix>/usr/local</prefix>
							<release>${build.number}</release>
							<defaultDirmode>755</defaultDirmode>
							<defaultFilemode>644</defaultFilemode>
							<defaultUsername>root</defaultUsername>
							<defaultGroupname>root</defaultGroupname>
							<needarch>noarch</needarch>
							<defineStatements>
								<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
								<defineStatement>__jar_repack 0</defineStatement>
							</defineStatements>
							<mappings>
								<mapping>
									<directory>/usr/local/bin</directory>
									<sources>
										<source>
											<location>src/main/shell/cac-git</location>
										</source>
									</sources>
									<filemode>755</filemode>
								</mapping>
								<mapping>
									<directory>/usr/local/lib/cac-git</directory>
									<sources>
										<source>
											<location>target/cac-aware-jgit-jar-with-dependencies.jar</location>
										</source>
									</sources>
								</mapping>
							</mappings>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
	</profiles>
</project>
